--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Blog
-subtitle: Miscellaneous thoughts on machine learning
+subtitle: Miscellaneous thoughts on machine learning and AI safety
 ---
